Change image-card gap quote overflow issue

--- a/style.css
+++ b/style.css
@@ -100,7 +100,9 @@ div{
 .image-card-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 0 150px;
+    align-items: center;
     height: 30vh;
     width: 100%;
     
@@ -115,6 +117,7 @@ div{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    gap: 30px;
 }
 
 .image-text, img{
@@ -129,6 +132,10 @@ div{
 }
 
 .quote-card-container{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    flex: 1;
     background-color: #e5e7eb;
     width: 100%;
     height: 30vh;
@@ -136,6 +143,9 @@ div{
 
 .quote-text{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
     font-size: 36px;
     margin: 0px 550px;
     margin-top: 20px;
@@ -147,6 +157,7 @@ div{
     font-weight: bolder;
     text-align: end;
     margin-right: 450px;
+    margin-bottom: 30px;
 }
 
 .sign-modal-container{
